--- a/examples/storm-starter/.classpath
+++ b/examples/storm-starter/.classpath
@@ -27,5 +27,7 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="Lib/REngine.jar"/>
+	<classpathentry kind="lib" path="Lib/RserveEngine.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
