--- a/examples/storm-starter/pom.xml
+++ b/examples/storm-starter/pom.xml
@@ -86,6 +86,11 @@
 			<artifactId>Rserve</artifactId>
 			<version>1.7-3</version>
 		</dependency>
+		<dependency>
+			<groupId>org.mongodb</groupId>
+			<artifactId>mongo-java-driver</artifactId>
+			<version>3.0.3</version>
+		</dependency>
 	</dependencies>
 
 	<build>
